ファイル名修正・画像更新・index.html整理

--- a/Q2_terrace.html
+++ b/Q2_terrace.html
@@ -19,7 +19,7 @@
       margin: 0; /* 画面の端に余白が入らないようにする */
       padding: 0; /* 内側の余白もゼロにする */
       font-family: 'Segoe UI', sans-serif; /* 見やすくて現代的なフォントを使う */
-      background-image: url('../Q2imgs/terrace.png'); /* 背景画像を読み込む（カフェの画像） */
+      background-image: url('Q2imgs/terrace.png'); /* 背景画像を読み込む（カフェの画像） */
       background-size: cover; /* 背景画像を画面いっぱいに広げて表示 */
       background-position: center; /* 背景の中心を中央に合わせる */
       background-attachment: fixed; /* スクロールしても背景が固定されたままになる */
