--- a/Q2_work.html
+++ b/Q2_work.html
@@ -227,31 +227,31 @@ body.light #back-btn {
 
       <!-- ① マイデスク -->
       <div class="location-box" onclick="location.href='Q2_mydesk.html'">
-        <img src="../Q2imgs/my desk.png" alt="マイデスク" />
+        <img src="Q2imgs/mydesk.png" alt="マイデスク" />
         <div class="location-name">マイデスク</div>
       </div>
 
       <!-- ② 給湯室 -->
       <div class="location-box" onclick="location.href='Q2_kitchen.html'">
-        <img src="../Q2imgs/kitchen.png" alt="給湯室" />
+        <img src="Q2imgs/kitchen.png" alt="給湯室" />
         <div class="location-name">給湯室</div>
       </div>
 
       <!-- ③ テラス -->
       <div class="location-box" onclick="location.href='Q2_terrace.html'">
-        <img src="../Q2imgs/terrace.png" alt="テラス" />
+        <img src="Q2imgs/terrace.png" alt="テラス" />
         <div class="location-name">テラス</div>
       </div>
 
       <!-- ④ Artemの執務室 -->
       <div class="location-box" onclick="location.href='Q2_artem-office.html'">
-        <img src="../Q2imgs/Artemroom.png" alt="Artemの執務室" />
+        <img src="Q2imgs/Artemroom.png" alt="Artemの執務室" />
         <div class="location-name">Artemの執務室</div>
       </div>
 
       <!-- ⑤ カフェ -->
       <div class="location-box" onclick="location.href='Q2_cafe.html'">
-        <img src="../Q2imgs/cafe.png" alt="カフェ" />
+        <img src="Q2imgs/cafe.png" alt="カフェ" />
         <div class="location-name">カフェ</div>
       </div>
     </div>
