index.htmlリネーム・表示修正など

--- a/Q2_new-task.html
+++ b/Q2_new-task.html
@@ -266,7 +266,7 @@
 
   <!-- フッター -->
   <footer>
-    <button class="header-btn" id="back-btn" onclick="location.href='Q2_index.html'">受付に戻る</button>
+    <button class="header-btn" id="back-btn" onclick="location.href='Q2_main.html'">受付に戻る</button>
   </footer>
 
   <!-- JavaScript -->
