--- a/Q2_task-list.html
+++ b/Q2_task-list.html
@@ -286,7 +286,7 @@
   <!-- ===== フッター：戻るボタン ===== -->
   <footer>
     <!-- トップページに戻る -->
-    <button id="back-btn" onclick="location.href='Q2_index.html'">受付に戻る</button>
+    <button id="back-btn" onclick="location.href='Q2_main.html'">受付に戻る</button>
   </footer>
 
   <!-- ===== JavaScriptエリア ===== -->
