--- a/Q2_work.html
+++ b/Q2_work.html
@@ -260,7 +260,7 @@ body.light #back-btn {
   <!-- ===== フッター：戻るボタンのみ表示（固定）===== -->
   <footer>
     <!-- 受付画面（トップ）に戻るボタン -->
-    <button id="back-btn" onclick="location.href='Q2_index.html'">受付に戻る</button>
+    <button id="back-btn" onclick="location.href='Q2_main.html'">受付に戻る</button>
   </footer>
 
   <!-- ===== JavaScript：モード切替と保存処理 ===== -->
