新しい画像とHTMLファイルの修正を反映

--- a/Q2_task-list.html
+++ b/Q2_task-list.html
@@ -261,19 +261,19 @@
       <div class="char-select">
         <!-- Celestineボックス -->
         <div class="char-box" data-char="Celestine">
-          <img src="Q2imgs/Celestine.png" alt="Celestine">
+          <img src="Q2imgs/Celestine2.png" alt="Celestine">
           <div class="char-name">Celestine</div>
         </div>
 
         <!-- Artemボックス -->
         <div class="char-box" data-char="Artem">
-          <img src="Q2imgs/artem.png" alt="Artem">
+          <img src="Q2imgs/artem2.png" alt="Artem">
           <div class="char-name">Artem</div>
         </div>
 
         <!-- Kikiボックス -->
         <div class="char-box" data-char="Kiki">
-          <img src="Q2imgs/kiki.png" alt="Kiki">
+          <img src="Q2imgs/kiki2.png" alt="Kiki">
           <div class="char-name">Kiki</div>
         </div>
       </div>
