--- a/Q2_new-task.html
+++ b/Q2_new-task.html
@@ -244,15 +244,15 @@
           <div class="char-label">誰からの依頼？</div>
           <div class="char-options">
             <div class="char-box" data-value="Celestine">
-              <img src="Q2imgs/Celestine.png" alt="celestine" />
+              <img src="Q2imgs/Celestine2.png" alt="celestine" />
               <div class="char-name">Celestine</div>
             </div>
             <div class="char-box" data-value="Artem">
-              <img src="Q2imgs/artem.png" alt="artem" />
+              <img src="Q2imgs/artem2.png" alt="artem" />
               <div class="char-name">Artem</div>
             </div>
             <div class="char-box" data-value="Kiki">
-              <img src="Q2imgs/kiki.png" alt="kiki" />
+              <img src="Q2imgs/kiki2.png" alt="kiki" />
               <div class="char-name">Kiki</div>
             </div>
           </div>
